parse/y.output

state 0
	$accept: .list $end 
	stmts: .    (2)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	RETURN  shift 8
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 11
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	';'  shift 4
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 2 (src line 59)

	list  goto 1
	expr  goto 7
	stmt  goto 3
	stmts  goto 2
	nosemi  goto 5
	stmtnv  goto 6
	var  goto 26

state 1
	$accept:  list.$end 

	$end  accept
	.  error


state 2
	list:  stmts.    (1)

	.  reduce 1 (src line 54)


state 3
	stmts:  stmt.stmts 
	stmts: .    (2)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	RETURN  shift 8
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 11
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	';'  shift 4
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 2 (src line 59)

	expr  goto 7
	stmt  goto 3
	stmts  goto 57
	nosemi  goto 5
	stmtnv  goto 6
	var  goto 26

state 4
	stmt:  ';'.    (6)

	.  reduce 6 (src line 82)


5: shift/reduce conflict (shift 58(0), red'n 7(0)) on ';'
state 5
	stmt:  nosemi.    (7)
	stmt:  nosemi.';' 

	';'  shift 58
	.  reduce 7 (src line 94)


state 6
	nosemi:  stmtnv.    (9)

	.  reduce 9 (src line 97)


7: shift/reduce conflict (shift 79(0), red'n 10(0)) on SYM_IN
7: shift/reduce conflict (shift 87(1), red'n 10(0)) on PLUSEQ
7: shift/reduce conflict (shift 88(1), red'n 10(0)) on MINUSEQ
7: shift/reduce conflict (shift 89(1), red'n 10(0)) on MULEQ
7: shift/reduce conflict (shift 90(1), red'n 10(0)) on DIVEQ
7: shift/reduce conflict (shift 92(1), red'n 10(0)) on AMPEQ
7: shift/reduce conflict (shift 83(15), red'n 10(0)) on INC
7: shift/reduce conflict (shift 84(15), red'n 10(0)) on DEC
7: shift/reduce conflict (shift 91(1), red'n 10(0)) on OREQ
7: shift/reduce conflict (shift 93(1), red'n 10(0)) on XOREQ
7: shift/reduce conflict (shift 94(1), red'n 10(0)) on RSHIFTEQ
7: shift/reduce conflict (shift 95(1), red'n 10(0)) on LSHIFTEQ
7: shift/reduce conflict (shift 96(1), red'n 10(0)) on '='
7: shift/reduce conflict (shift 61(2), red'n 10(0)) on '?'
7: shift/reduce conflict (shift 81(4), red'n 10(0)) on OR
7: shift/reduce conflict (shift 80(5), red'n 10(0)) on AND
7: shift/reduce conflict (shift 67(6), red'n 10(0)) on '|'
7: shift/reduce conflict (shift 69(7), red'n 10(0)) on '^'
7: shift/reduce conflict (shift 68(8), red'n 10(0)) on '&'
7: shift/reduce conflict (shift 72(9), red'n 10(0)) on GT
7: shift/reduce conflict (shift 74(9), red'n 10(0)) on GE
7: shift/reduce conflict (shift 73(9), red'n 10(0)) on LT
7: shift/reduce conflict (shift 75(9), red'n 10(0)) on LE
7: shift/reduce conflict (shift 76(9), red'n 10(0)) on EQ
7: shift/reduce conflict (shift 78(9), red'n 10(0)) on NE
7: shift/reduce conflict (shift 77(9), red'n 10(0)) on REGEXEQ
7: shift/reduce conflict (shift 70(10), red'n 10(0)) on LSHIFT
7: shift/reduce conflict (shift 71(10), red'n 10(0)) on RSHIFT
7: shift/reduce conflict (shift 63(11), red'n 10(0)) on '+'
7: shift/reduce conflict (shift 64(11), red'n 10(0)) on '-'
7: shift/reduce conflict (shift 65(12), red'n 10(0)) on '*'
7: shift/reduce conflict (shift 66(12), red'n 10(0)) on '/'
7: shift/reduce conflict (shift 62(14), red'n 10(0)) on '%'
7: shift/reduce conflict (shift 85(14), red'n 10(0)) on '.'
7: shift/reduce conflict (shift 86(0), red'n 10(0)) on '('
7: shift/reduce conflict (shift 60(0), red'n 10(0)) on '{'
7: shift/reduce conflict (shift 59(0), red'n 10(0)) on '['
state 7
	nosemi:  expr.    (10)
	expr:  expr.'[' expr ']' 
	expr:  expr.'{' expr '}' 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.'^' expr 
	expr:  expr.LSHIFT expr 
	expr:  expr.RSHIFT expr 
	expr:  expr.GT expr 
	expr:  expr.LT expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.REGEXEQ expr 
	expr:  expr.NE expr 
	expr:  expr.SYM_IN expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.equals expr 
	expr:  expr.INC 
	expr:  expr.DEC 
	expr:  expr.'.' dottype 
	expr:  expr.'.' method 
	expr:  expr.'.' method '(' arglist ')' 
	expr:  expr.'(' arglist ')' 

	SYM_IN  shift 79
	PLUSEQ  shift 87
	MINUSEQ  shift 88
	MULEQ  shift 89
	DIVEQ  shift 90
	AMPEQ  shift 92
	INC  shift 83
	DEC  shift 84
	OREQ  shift 91
	XOREQ  shift 93
	RSHIFTEQ  shift 94
	LSHIFTEQ  shift 95
	'='  shift 96
	'?'  shift 61
	OR  shift 81
	AND  shift 80
	'|'  shift 67
	'^'  shift 69
	'&'  shift 68
	GT  shift 72
	GE  shift 74
	LT  shift 73
	LE  shift 75
	EQ  shift 76
	NE  shift 78
	REGEXEQ  shift 77
	LSHIFT  shift 70
	RSHIFT  shift 71
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 62
	'.'  shift 85
	'('  shift 86
	'{'  shift 60
	'['  shift 59
	.  reduce 10 (src line 98)

	equals  goto 82

8: shift/reduce conflict (shift 97(0), red'n 11(0)) on '('
state 8
	stmtnv:  RETURN.    (11)
	stmtnv:  RETURN.'(' ')' 
	stmtnv:  RETURN.'(' expr ')' 

	'('  shift 97
	.  reduce 11 (src line 99)


state 9
	stmtnv:  BREAK.    (14)

	.  reduce 14 (src line 117)


state 10
	stmtnv:  CONTINUE.    (15)

	.  reduce 15 (src line 123)


state 11
	stmtnv:  GLOBALDEC.globlist 
	expr:  GLOBALDEC.'(' globvar ')' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 99
	.  error

	var  goto 101
	globvar  goto 100
	globlist  goto 98

state 12
	expr:  '{'.stmts '}' 
	stmts: .    (2)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	RETURN  shift 8
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 11
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	';'  shift 4
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 2 (src line 59)

	expr  goto 7
	stmt  goto 3
	stmts  goto 103
	nosemi  goto 5
	stmtnv  goto 6
	var  goto 26

state 13
	expr:  SYM_DELETE.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 104
	var  goto 26

state 14
	expr:  READONLY.var 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	.  error

	var  goto 106

state 15
	expr:  ONCHANGE.'(' var ',' expr ')' 

	'('  shift 107
	.  error


state 16
	expr:  WHILE.'(' expr ')' stmt 

	'('  shift 108
	.  error


state 17
	expr:  FOR.'(' optstmt ';' optrelx ';' optstmt ')' stmt 
	expr:  FOR.'(' var SYM_IN expr ')' stmt 

	'('  shift 109
	.  error


state 18
	expr:  IF.'(' expr ')' stmt 
	expr:  IF.'(' expr ')' stmt ELSE stmt 

	'('  shift 110
	.  error


state 19
	expr:  KW_NEW.var '(' narglist ')' 
	expr:  KW_NEW.'(' expr ')' var '(' narglist ')' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 112
	.  error

	var  goto 111

state 20
	expr:  UNDEFINE.var 
	expr:  UNDEFINE.'(' var ')' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 114
	.  error

	var  goto 113

state 21
	expr:  '['.arrlist ']' 
	arrlist: .    (147)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 147 (src line 741)

	expr  goto 117
	var  goto 26
	arritem  goto 116
	arrlist  goto 115

state 22
	expr:  INTEGER.    (31)

	.  reduce 31 (src line 220)

